<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fullscreenBackgroundColor"
    android:theme="@style/Theme.Locker.Fullscreen"
    tools:context=".ScanCard">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/lbl_ScanCard"
        android:textColor="?attr/fullscreenTextColor"
        android:textSize="50sp"
        android:textStyle="bold"

        />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">
        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <RelativeLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="60dp"
                android:background="@color/blue"

                >


                <Button
                    style="?attr/materialButtonOutlinedStyle"
                    android:id="@+id/btn_book"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_weight="1"
                    android:textColor="@color/light_green"
                    android:textSize="35dp"
                    app:cornerRadius="90dp"
                    app:strokeWidth="3dp"
                    android:text="@string/btn_book"
                    app:strokeColor="@color/light_green"
                    android:onClick="scanNewCard"
                    />



                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_checkout"
                    android:layout_width="280dp"
                    android:layout_height="110dp"
                    android:layout_alignParentRight="true"
                    android:layout_weight="1"
                    android:paddingLeft="50sp"
                    android:paddingRight="50sp"
                    android:text="@string/btn_checkout"
                    android:textSize="30dp"
                    app:cornerRadius="90dp"
                    />
            </RelativeLayout>
        </LinearLayout>
    </FrameLayout>

</FrameLayout>