<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fullscreenBackgroundColor"
    android:theme="@style/ThemeOverlay.Locker.FullscreenContainer"
    tools:context=".SettingsAdmin">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/fullscreen_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:keepScreenOn="true"
                android:text="@string/title_activity_settings_admin"
                android:textColor="?attr/fullscreenTextColor"
                android:textSize="50sp"
                android:textStyle="bold"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="200sp"
                />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="40dp"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="776dp"
                    android:layout_height="wrap_content"
                    android:textSize="40dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true">

                <LinearLayout
                    android:id="@+id/fullscreen_content_controls"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <RelativeLayout
                        android:id="@+id/relativeLayout1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="60dp"
                        android:background="@color/blue"

                        >

                        <Button
                            style="?attr/materialButtonOutlinedStyle"
                            android:layout_width="280dp"
                            android:layout_height="110dp"
                            android:layout_alignParentLeft="true"
                            android:layout_weight="1"
                            android:text="@string/btn_cancel"
                            android:textColor="@color/light_green"
                            android:textSize="40dp"
                            app:cornerRadius="90dp"
                            app:strokeWidth="3dp"
                            app:strokeColor="@color/light_green"
                            />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_login"
                            android:layout_width="280dp"
                            android:layout_height="110dp"
                            android:layout_alignParentRight="true"
                            android:layout_weight="1"
                            android:paddingLeft="50sp"
                            android:paddingRight="50sp"
                            android:text="@string/btn_login"
                            android:textSize="40dp"
                            android:onClick="btnLogin"
                            app:cornerRadius="90dp"
                            />
                    </RelativeLayout>
                </LinearLayout>


            </FrameLayout>

        </LinearLayout>





    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

</FrameLayout>