<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fullscreenBackgroundColor"
    android:theme="@style/ThemeOverlay.Locker.Admin"
    tools:context=".SettingMenu">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/title_activity_setting_menu"
        android:textColor="?attr/fullscreenTextColor"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="200sp"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="200dp"
        android:orientation="horizontal"
        android:gravity="center"
        >



        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:shrinkColumns="1"
            android:stretchColumns="*"
            android:gravity="center"

            >

            <TableRow android:weightSum="1" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:ellipsize="end"
                    android:text="Lockers Count"
                    android:textColor="#ffffff"
                    android:textSize="50dp"
                    android:textStyle="bold"

                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:ellipsize="end"
                    android:layout_gravity="center">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="500dp"
                        android:layout_height="80dp"
                        android:layout_column="1"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/grey"
                        android:ellipsize="end" />
                </com.google.android.material.textfield.TextInputLayout>


            </TableRow>

            <TableRow android:weightSum="2"
                android:layout_marginTop="30dp"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Unlock All Lockers"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:textSize="50dp"
                    />

                <Button
                    android:id="@+id/date"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:text="@string/btn_unlock_all_lockers"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:backgroundTint="@color/grey"
                    android:textSize="25dp"
                    />
            </TableRow>



        </TableLayout>

    </LinearLayout>







    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        >


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

            <LinearLayout
                android:id="@+id/fullscreen_content_controls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="60dp"
                android:layout_marginBottom="60dp"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <Button
                    android:id="@+id/btn_Back"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="280dp"
                    android:layout_height="110dp"
                    android:layout_alignParentLeft="true"
                    android:layout_weight="1"
                    android:text="@string/btn_cancel"
                    android:textColor="@color/light_green"
                    android:textSize="40dp"
                    app:cornerRadius="90dp"
                    app:strokeWidth="3dp"
                    app:strokeColor="@color/light_green"
                    />

            </LinearLayout>


        </FrameLayout>

    </LinearLayout>


    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

</FrameLayout>